added banner section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,61 @@
 
         <section class="next-target">
             <h2>My Next Target</h2>
-            <p>When fear is used as a weapon, the panic paralyses the target like a spider web which immobilizes the preys in the last <br> seconds of their existences. Thenceforth</p>
+            <p>When fear is used as a weapon, the panic paralyses the target like a spider web which immobilizes the
+                preys in the last <br> seconds of their existences. Thenceforth</p>
+            <div class="container">
+                <div class="boxs">
+                    <div class="item">
+                        <div class="img">
+                            <img src="assets/react.png" alt="react">
+                        </div>
+                        <div class="details">
+                            <h6>React</h6>
+                            <p>JavaScript is the scripting language of the Web. JavaScript is used in millions.
+                                JavaScript is used in millions of Web pages to add functionality, validate forms, </p>
+                            <a href="#">Learn More..</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="assets/node.jpg" alt="node.js">
+                        </div>
+                        <div class="details">
+                            <h6>Node JS</h6>
+                            <p>js is cross-platform, open-source Javascript runtime that works on so-called server-side.
+                                That means you can execute Javascript code on your computer using that runtime rather
+                                than running it in the browser.</p>
+                            <a href="#">Learn More..</a>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="img">
+                            <img src="assets/mongodb.png" alt="mongodb">
+                        </div>
+                        <div class="details">
+                            <h6>MongoDB</h6>
+                            <p>MongoDB offers a flexible framework for creating data processing pipelines called
+                                aggregation pipelines. It features dozens of stages and over 150 operators and
+                                expressions,</p>
+                            <a href="#">Learn More..</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- I need Support Section -->
+
+        <section class="suport-section">
+            <div class="container">
+                <h2>I need Support</h2>
+                <p>Being able to explain the main points of a document or article without reading its entirety can be
+                    useful, whether for a professional project or a personal</p>
+                <div class="form">
+                    <input type="text">
+                    <button type="submit">Submit</button>
+                </div>
+            </div>
         </section>
 
     </main>
