added next target section

--- a/index.html
+++ b/index.html
@@ -170,24 +170,37 @@
 
         <!-- I need Support Section -->
 
-        <section class="suport-section">
+        <section class="support-section" id="support">
             <div class="container">
                 <h2>I need Support</h2>
                 <p>Being able to explain the main points of a document or article without reading its entirety can be
                     useful, whether for a professional project or a personal</p>
                 <div class="form">
-                    <input type="text">
+                    <input type="text" placeholder="suggest me any feedback for me">
                     <button type="submit">Submit</button>
                 </div>
             </div>
         </section>
 
     </main>
-    <!-- Main Start End -->
+    <!-- Main End -->
 
     <!-- Footer Start -->
-    <footer></footer>
-    <!-- Footer Start End -->
+    <footer class="footer-section">
+        <div class="container">
+            <div class="footer-content">
+                <div class="text">
+                    <h5>&copy;CopyRight All Right Reserve, Design By Redoy Dash</h5>
+                </div>
+                <div class="icons">
+                    <a href="#"><img src="assets/facebook.png" alt=""></a>
+                    <a href="#"><img src="assets/github.png" alt=""></a>
+                    <a href="#"><img src="assets/linkedin-icon 1.png" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer End -->
 </body>
 
 </html>
