added google font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Azeret+Mono:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <!-- Custom Style Shet -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -29,9 +35,9 @@
                 <img src="assets/Group.png" alt="img">
                 <h5>"In the near future, I hope to become a Developer."</h5>
                 <p>I'm so happy to share that I've created my very first website using HTML and CSS! This is a big step
-                    for me on my path to becoming a developer. After lots of learning and practice, I finally made a
+                    for me on my path I finally made a
                     website that works well and looks great.</p>
-                <button><a href="#">Contact With Me</a></button>
+                <button><a href="#support">Contact With Me</a></button>
             </div>
         </section>
 
