add and finished all design and style

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <div class="img">
                             <img src="assets/mongodb.png" alt="mongodb">
                         </div>
-                        <div class="details">
+                        <div class="details" style="margin-left: 10px;">
                             <h6>MongoDB</h6>
                             <p>MongoDB offers a flexible framework for creating data processing pipelines called
                                 aggregation pipelines. It features dozens of stages and over 150 operators and
